<resources>
    <string name="app_name">U酷天气</string>

    <!--MainFragment-->
    <string name="tv_simple_style">简约风格的天气APP</string>
    <string name="tv_add_city">添加城市</string>
    <string name="tv_share_app">分享应用</string>
    <string name="btn_show_default_city">默认城市</string>
    <string name="tv_about_app">关于U酷</string>
    <string name="tv_dropout_app">退出程序</string>
    <string name="toast_select_default_city">请先设置默认城市</string>

    <!--退出APP-->
    <string name="dialog_title_exit_app">退出 U酷天气</string>
    <string name="dialog_message_exit_app">是否确定退出U酷天气？</string>
    <string name="dialog_positive_button_exit_app">确定</string>
    <string name="dialog_negative_button_exit_app">取消</string>

    <string name="add_city_text">热门城市</string>
    <string name="btn_set_normal">设为默认</string>
    <string name="btn_normal">默认</string>

    <!--关于作者-->
    <string name="author">Copyright © 2017-2020 回眸-已劃句点 All rights reserved</string>
    <string name="about_me">回眸-已劃句点</string>
    <string name="about_version_info">U酷天气 1.0.0</string>
    <string name="about_contact_author_info">QQ:1511065030</string>
    <string name="tv_about_author">关于作者：</string>
    <string name="tv_about_version">版本信息：</string>
    <string name="tv_contact_author">联系作者：</string>
    <string name="tv_search_author_blog">作者博客</string>

    <!--主界面now.xml布局显示-->
    <string name="tv_air_quality">空气质量:</string>
    <string name="tv_aqi">AQI</string>
    <string name="tv_pm25">PM2.5</string>

    <!--CityManagerActivity-->
    <string name="dialog_delete_all_city_title">删除所有城市</string>
    <string name="dialog_delete_city_message">此操作会将所有目前管理的城市清除，返回天气界面后将使用定位功能重新获取天气。
        是否确认删除所有城市</string>
    <string name="toast_internet_no_useful_to_get_city">未检测到可用网络，无法获取城市信息，请检查网络连接状态</string>

    <!--ShareAppActivity-->
    <string name="share_app_content">我发现了一款简约好用的APP "U酷天气"，欢迎关注作者的博客 http://blog.csdn.net/xiaoxiangyuhai?viewmode=list</string>
    <string name="share_app_failed">分享信息失败</string>
    <string name="toast_internet_no_useful_for_share_app">未检测到可用网络，无法分享APP信息，请检查网络连接状态</string>

    <!--ShowCitiesActivity-->
    <string name="tv_title_select_city">请选择城市</string>
    <string name="progress_dialog_content_get_cities">正在获取市</string>
    <string name="toast_internet_error">网络发生错误，请稍后重试</string>

    <!--ShowCountiesActivity-->
    <string name="tv_title_select_counties">请选择区/县</string>
    <string name="toast_context_not_repeat_add_county">不能重复添加</string>
    <string name="progress_dialog_getting_weather_info">正在获取天气数据</string>
    <string name="db_click_update">点击更新</string>
    <string name="toast_content_get_weather_info_failed">获取天气数据失败</string>
    <string name="progress_dialog_getting_counties">正在获取区(县)</string>

    <!--ShowProvinceActivity-->
    <string name="tv_title_select_province">请选择省</string>
    <string name="progress_dialog_content_get_province">正在获取省</string>

    <!--WeatherShowActivity-->
    <string name="toast_detect_internet_no_useful">未检测到可用网络，请检查网络连接状态</string>
    <string name="toast_weather_info_finished">天气数据已更新</string>
    <string name="toast_get_weather_info_failed">获取天气信息失败</string>
    <string name="toast_no_useful_thirty_minutes">连续30分钟没有检测到可用的网络，所以关闭APP</string>
    <string name="progress_dialog_updating_weather_info">正在更新天气数据</string>
    <string name="string_comfort">舒适度：</string>
    <string name="string_car_wash_index">洗车指数：</string>
    <string name="string_sports_advice">运动建议：</string>
    <string name="string_UV">紫外线：</string>
    <string name="string_level">级别：</string>
    <string name="string_status">状态：</string>
    <string name="toast_show_weather_info_failed">显示天气信息失败，请刷新重试</string>
    <string name="toast_please_allow_all_permission">请允许所有申请的所必需的权限，否则软件无法使用</string>
    <string name="toast_allow_permission_error">允许运行时权限发生未知错误</string>
    <string name="progress_dialog_being_location">正在定位</string>

    <!--CityManagerAdapter-->
    <string name="dialog_delete_city_title">删除城市</string>
    <string name="dialog_confirm_delete_city_content">是否确认删除城市 : </string>
    <string name="dialog_delete_city_failed">删除失败，请重试</string>
    <string name="toast_set_default_success">设置默认成功</string>
    <string name="toast_cancel_set_default_success">取消默认成功</string>
    <string name="toast_unrecognized_state">不能识别的状态</string>

</resources>
